Updated Expense History

--- a/index.html
+++ b/index.html
@@ -148,9 +148,10 @@
         <!-- Expense List Section -->
         <div class="panel expense-list-panel">
             <div class="panel-header">
-                <h2 class="panel-title">📝 Recent Expenses</h2>
+                <h2 class="panel-title">📝 Expense History</h2>
                 <button id="clearAllBtn" class="btn btn-secondary btn-small">Clear All</button>
             </div>
+            <p class="expense-list-note">💡 Budget tracks current month only. Previous months shown with reduced opacity.</p>
             
             <div class="expense-list" id="expenseList">
                 <!-- Empty state message -->
